# wisp

./: .gitignore  Cargo.toml  NOTICE.md  README.md
.github/workflows/: ci.yml  release.yml
crates/wisp-cli/: Cargo.toml
crates/wisp-cli/src/: main.rs
crates/wisp-core/: Cargo.toml
crates/wisp-core/src/: error.rs  lib.rs  parse.rs  presets.rs  profile.rs  singbox.rs  split.rs
crates/wisp-engine/: Cargo.toml
crates/wisp-engine/src/: clash_api.rs  engine.rs  lib.rs  resources.rs  singbox_process.rs
docs/: ARCHITECTURE.md  RELEASING.md
docs/dev-vault/: Adding a Protocol or Transport.md  Architecture Overview.md  Bug - Stale app binary on in-place upgrade.md  Building and Running.md  Contributing.md  Crate - wisp-cli.md  Crate - wisp-core.md  Crate - wisp-engine.md  Engine Trait & Android Port.md  Glossary.md  Home.md  Split Tunneling.md  Split tunneling for games (DNS-leak fix & Valve preset).md  Tauri Backend.md  Web UI.md  sing-box Config Model.md
docs/user-guide/: 01-installation.md  02-adding-a-server.md  03-connecting.md  04-split-tunneling.md  05-settings-and-mtu.md  06-troubleshooting.md  07-faq.md  08-power-user-cli.md  README.md
scripts/: fetch-resources.ps1  fetch-resources.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  elevation.rs  lib.rs  main.rs  state.rs
ui/: index.html
ui/assets/: styles.css
ui/src/: main.js
