# Standalone workspace: src-tauri builds on Windows (Wintun/TUN/webview) and is
# excluded from the root workspace so the pure-Rust crates build on any OS.
[workspace]

[package]
name = "wisp-app"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Wisp contributors"]
rust-version = "1.77"
description = "Wisp desktop app (Tauri v2)."

[lib]
name = "wisp_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wisp-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
wisp-core = { path = "../crates/wisp-core" }
wisp-engine = { path = "../crates/wisp-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
sysinfo = "0.32"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
# by default Tauri uses the system webview
custom-protocol = ["tauri/custom-protocol"]
