[package]
name = "wisp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Wisp headless CLI: test harness for wisp-core + wisp-engine."

[[bin]]
name = "wisp"
path = "src/main.rs"

[dependencies]
wisp-core = { workspace = true }
wisp-engine = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
