[package]
name = "wisp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Wisp core: profile model, share-link parsing, and sing-box config generation."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
